<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="x14331851.student.ncirl.ie.arcoapplication.SignUp">


    <!--<ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/background1"
        android:scaleType="centerCrop"/>-->

    <ImageView
        android:id="@+id/fontLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/ic_arcowhite" />
    
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fontLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/trans_white_sqaure"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:fontFamily="@font/cairo"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/SignUpHeading"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionSignText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cairo"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/signUpDes"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/white_rounded_input"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:fontFamily="@font/cairo_extralight"
                android:layout_marginBottom="10dp"
                android:hint="@string/emailHint"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/emailTextView"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/white_rounded_input"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:fontFamily="@font/cairo_extralight"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/passwordTextView"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:fontFamily="@font/cairo"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_signup"
                android:background="@drawable/registerbtn_bg"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btn_login_link"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cairo"
                android:text="@string/btn_link_login"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>




</RelativeLayout>
